# nonebot-plugin-maimaidx

./: .gitignore  LICENSE  README.md  pyproject.toml
nonebot_plugin_aliases/: __init__.py
nonebot_plugin_maimaidx/: __init__.py  config.py  constants.py  lxns_oauth.py  resources.py
nonebot_plugin_maimaidx/command/: mai_alias.py  mai_base.py  mai_guess.py  mai_score.py  mai_search.py  mai_table.py
nonebot_plugin_maimaidx/commands/: __init__.py  depend.py  extra.py  mai_alias.py  mai_arcade.py  mai_base.py  mai_guess.py  mai_score.py  mai_search.py  mai_table.py
nonebot_plugin_maimaidx/core/: alias_ws_push.py  handler.py  handler_error.py  lxns_oauth.py  search.py  tool.py
nonebot_plugin_maimaidx/core/clients/: exceptions.py  http.py
nonebot_plugin_maimaidx/core/clients/divingfish/: client.py  exceptions.py
nonebot_plugin_maimaidx/core/clients/divingfish/models/: music.py  score.py
nonebot_plugin_maimaidx/core/clients/lxns/: client.py
nonebot_plugin_maimaidx/core/clients/lxns/models/: base.py  collection.py  enum.py  music.py  oauth.py  player.py  score.py
nonebot_plugin_maimaidx/core/clients/yuzuchan/: client.py  models.py
nonebot_plugin_maimaidx/core/clients/yuzuchan/models/: status.py
nonebot_plugin_maimaidx/core/database/: qq.py
nonebot_plugin_maimaidx/core/image/: __init__.py  assets.py  base.py  best50.py  chart.py  info.py  plate_table.py  score.py  song.py  table.py  tools.py  update_table.py
nonebot_plugin_maimaidx/core/merge/: __init__.py  alias.py  alias_list.py  guess.py  music_list.py  play_result.py  player.py
nonebot_plugin_maimaidx/core/merge/models/: __init__.py  alias.py  alias_push.py  best50.py  category.py  enum.py  guess.py  player.py  score.py  service.py  song.py  theme.py
nonebot_plugin_maimaidx/core/service/: __init__.py  arcade.py  diving_fish.py  lxns.py  yuzuchan.py
nonebot_plugin_maimaidx/core/utils/: calc.py  song_id.py
nonebot_plugin_maimaidx/libraries/: image.py  maimaidx_api_data.py  maimaidx_best_50.py  maimaidx_error.py  maimaidx_model.py  maimaidx_music.py  maimaidx_music_info.py  maimaidx_player_score.py  maimaidx_update_plate.py  tool.py
tests/: test_lxns_oauth.py
